feat : Essential endpoints implemented
